added text of part 2

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body>
-
+<h2> Часть 1</h2>
+<p> текст первочй части </p>
 </body>
 </html>
